--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -24,6 +24,7 @@
                             <a class="dropdown-item" th:href="@{/admin/register-admin/}">Ajouter un admin</a>
                             <a class="dropdown-item" th:href="@{/admin/register-volunteer/}">Ajouter un volontaire</a>
                             <a class="dropdown-item" th:href="@{/admin/missing-people/}">Liste des disparus</a>
+                            <a class="dropdown-item" th:href="@{/admin/add-missing-person/}">Signaler une disparition</a>
                         </div>
                     </li>
                 </span>
