--- a/src/main/resources/templates/admin/register-volunteer.html
+++ b/src/main/resources/templates/admin/register-volunteer.html
@@ -17,7 +17,7 @@
                 <div th:replace="fragments/headers :: card-header"></div>
                 <div class="card-header text-center">Créer un compte bénévole</div>
                 <div class="card-body">
-                    <form action="#" th:action="@{/admin/register-admin}" th:object="${registeringUser}" method="POST">
+                    <form action="#" th:action="@{/admin/register-volunteer}" th:object="${registeringUser}" method="POST">
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col-md-6">
