Add map to display poster locations for a missign person

--- a/src/main/resources/templates/admin/missing-people.html
+++ b/src/main/resources/templates/admin/missing-people.html
@@ -40,7 +40,10 @@
                                 <td><th:block th:text="${missingPerson.firstname}"/></td>
                                 <td><th:block th:text="${missingPerson.lastname}"/></td>
                                 <td><a th:href="'/admin/missing-person-picture/' + ${missingPerson.id}"><img class="img-fluid img-thumbnail" style="display: block; max-width: 300px; max-height: 300px; width: auto; height: auto" th:src="'/admin/missing-person-picture/' + ${missingPerson.id}"></a></td>
-                                <td><a class="btn btn-dark text-white" th:href="'/admin/missing-person-missions/' + ${missingPerson.id}">Liste des missions</a></td>
+                                <td>
+                                    <a class="btn btn-dark text-white" th:href="'/admin/missing-person-missions/' + ${missingPerson.id}">Liste des missions</a>
+                                    <a class="btn btn-primary text-white" th:href="'/admin/display-posters-map/' + ${missingPerson.id}">Carte</a>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
