--- a/src/main/resources/templates/admin/register-admin.html
+++ b/src/main/resources/templates/admin/register-admin.html
@@ -9,7 +9,7 @@
 
         <th:block th:replace="fragments/css :: css"/>
 
-        <title>SB Admin - Register</title>
+        <title>Child Focus - Enregistrement d'un bénévole</title>
     </head>
     <body class="bg-dark">
         <div class="container">
